[gd_scene load_steps=6 format=2]

[ext_resource path="res://asset/oswald/Oswald-Bold.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://InfoScreen.gd" type="Script" id=2]

[sub_resource type="DynamicFontData" id=1]
hinting = 0
font_path = "res://asset/oswald/Oswald-Regular.ttf"

[sub_resource type="DynamicFont" id=2]
outline_color = Color( 0.945098, 0.12549, 0.12549, 1 )
use_mipmaps = true
use_filter = true
font_data = SubResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 18
font_data = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer"]
margin_right = 161.0
margin_bottom = 117.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Schiff" type="Node" parent="."]

[node name="Line_01" type="HBoxContainer" parent="Schiff"]
margin_right = 161.0
margin_bottom = 28.0

[node name="Key" type="Label" parent="Schiff/Line_01"]
margin_top = 1.0
margin_right = 75.0
margin_bottom = 26.0
rect_min_size = Vector2( 75, 0 )
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.886275, 0.847059, 0.0117647, 1 )
text = "Schiff X"

[node name="Value" type="Label" parent="Schiff/Line_01"]
margin_left = 79.0
margin_right = 129.0
margin_bottom = 28.0
rect_min_size = Vector2( 50, 0 )
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0.968627, 1, 0.588235, 1 )
text = "100"
valign = 1

[node name="Line_02" type="HBoxContainer" parent="Schiff"]
margin_top = 32.0
margin_right = 161.0
margin_bottom = 60.0

[node name="Key" type="Label" parent="Schiff/Line_02"]
margin_top = 1.0
margin_right = 75.0
margin_bottom = 26.0
rect_min_size = Vector2( 75, 0 )
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.886275, 0.847059, 0.0117647, 1 )
text = "Schiff Y"

[node name="Value" type="Label" parent="Schiff/Line_02"]
margin_left = 79.0
margin_right = 129.0
margin_bottom = 28.0
rect_min_size = Vector2( 50, 0 )
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0.968627, 1, 0.588235, 1 )
text = "100"
valign = 1

[node name="Line_03" type="HBoxContainer" parent="Schiff"]
margin_top = 64.0
margin_right = 161.0
margin_bottom = 92.0

[node name="Key" type="Label" parent="Schiff/Line_03"]
margin_top = 1.0
margin_right = 75.0
margin_bottom = 26.0
rect_min_size = Vector2( 75, 0 )
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.886275, 0.847059, 0.0117647, 1 )
text = "Schiff °"

[node name="Value" type="Label" parent="Schiff/Line_03"]
margin_left = 79.0
margin_right = 129.0
margin_bottom = 28.0
rect_min_size = Vector2( 50, 0 )
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0.968627, 1, 0.588235, 1 )
text = "100"
valign = 1

[node name="Schiff2" type="Node2D" parent="."]
position = Vector2( 0, 120.11 )
__meta__ = {
"_edit_group_": true
}

[node name="Line_01" type="HBoxContainer" parent="Schiff2"]
margin_right = 161.0
margin_bottom = 28.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Key" type="Label" parent="Schiff2/Line_01"]
margin_top = 1.0
margin_right = 75.0
margin_bottom = 26.0
rect_min_size = Vector2( 75, 0 )
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.0117647, 0.886275, 0.498039, 1 )
text = "Blast X"

[node name="Value" type="Label" parent="Schiff2/Line_01"]
margin_left = 79.0
margin_right = 129.0
margin_bottom = 28.0
rect_min_size = Vector2( 50, 0 )
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0.419608, 0.862745, 0.8, 1 )
text = "100"
valign = 1

[node name="Line_02" type="HBoxContainer" parent="Schiff2"]
margin_top = 32.0
margin_right = 161.0
margin_bottom = 60.0

[node name="Key" type="Label" parent="Schiff2/Line_02"]
margin_top = 1.0
margin_right = 75.0
margin_bottom = 26.0
rect_min_size = Vector2( 75, 0 )
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.0117647, 0.886275, 0.498039, 1 )
text = "Blast Y"

[node name="Value" type="Label" parent="Schiff2/Line_02"]
margin_left = 79.0
margin_right = 129.0
margin_bottom = 28.0
rect_min_size = Vector2( 50, 0 )
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0.419608, 0.862745, 0.8, 1 )
text = "100"
valign = 1

[node name="Line_03" type="HBoxContainer" parent="Schiff2"]
margin_top = 64.0
margin_right = 161.0
margin_bottom = 92.0

[node name="Key" type="Label" parent="Schiff2/Line_03"]
margin_top = 1.0
margin_right = 75.0
margin_bottom = 26.0
rect_min_size = Vector2( 75, 0 )
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.0117647, 0.886275, 0.498039, 1 )
text = "Blast °"

[node name="Value" type="Label" parent="Schiff2/Line_03"]
margin_left = 79.0
margin_right = 129.0
margin_bottom = 28.0
rect_min_size = Vector2( 50, 0 )
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0.419608, 0.862745, 0.8, 1 )
text = "100"
valign = 1
